--- a/finetuning.html
+++ b/finetuning.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fine Tuning - From Data 2 AI</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <img src="images/logo.png" alt="From Data 2 AI Logo" class="logo">
-            <h1><a href="/">From Data 2 AI</a></h1>
-            <p class="subtitle">From Data to AI: ML, Generative AI, and LLM insights for real-world applications</p>
-        </div>
+        <h1><a href="/">From Data 2 AI</a></h1>
+        <p class="subtitle">From Data to AI: ML, Generative AI, and LLM insights for real-world applications</p>
+        <img src="images/profile.jpg" alt="Raul Rocha" class="profile-photo">
         <nav>
             <a href="index.html">LLM</a>
             <a href="finetuning.html" class="active">Fine Tuning</a>
@@ -25,7 +25,6 @@
                 <svg width="24" height="24" viewBox="0 0 24 24"><path d="M19,5H5c-1.1,0-2,.9-2,2v10c0,1.1.9,2,2,2h14c1.1,0,2-.9,2-2V7c0-1.1-.9-2-2-2zm.5,12c0,.3-.2.5-.5.5H5c-.3,0-.5-.2-.5-.5V9.8l7.5,5.6,7.5-5.6V17zm0-9.1L12,13.6,4.5,7.9V7c0-.3.2-.5.5-.5h14c.3,0,.5.2.5.5v.9z"/></svg>
             </a>
         </div>
-        <img src="images/profile.jpg" alt="Raul Rocha" class="profile-photo">
     </header>
 
     <main>
