Add About content to homepage

--- a/index.html
+++ b/index.html
@@ -29,8 +29,62 @@
 
     <main>
         <section id="content">
-            <h2>LLM</h2>
-            <!-- Seu conteúdo sobre LLM aqui -->
+            <h2>✨ About fromdata2ai.com</h2>
+            
+            <p>Hi, I'm <strong>Raul Rocha</strong> — a Data Scientist and LLM Engineer with a passion for building systems that transform messy, unstructured data into clear signals and smarter decisions.</p>
+
+            <p>My journey started at USP, where I studied Molecular Sciences: a deeply interdisciplinary program that gave me strong roots in math, statistics, programming, and scientific thinking. Since then, I've worked across the data lifecycle, from SQL pipelines and automated dashboards to forecasting models, churn prediction, and production-ready GenAI solutions.</p>
+
+            <p>Over the last few years, I've led and delivered projects that improved marketing performance, cut operational time, and helped teams move faster with fewer errors. What excites me isn't just building a model; it's building something that works. Something that integrates with people, processes, and platforms.</p>
+
+            <h3>🧠 What I work on</h3>
+            <ul>
+                <li>Fine-tuning open-source LLMs (Mistral, DeepSeek, etc.) for business-specific use cases</li>
+                <li>Designing RAG pipelines using vector DBs, LangChain, and semantic search</li>
+                <li>Deploying LLMs on AWS, with scalability and cost in mind (SageMaker, ECR, Athena, S3)</li>
+                <li>Building AI agents that automate complex workflows like campaign mapping</li>
+                <li>Maintaining clean SQL pipelines for marketing, ecommerce, and funnel analytics</li>
+            </ul>
+
+            <p>When needed, I still reach for traditional ML, especially when a lean logistic regression or XGBoost model solves the problem just as well.</p>
+            <p><em>I currently specialize in the practical side of Generative AI.</em></p>
+
+            <h3>📐 My approach</h3>
+            <p>I don't build AI for the sake of buzz. I build it to ship, improve, and stay useful over time. I prefer:</p>
+            <ul>
+                <li>Testable experiments over assumptions</li>
+                <li>Simpler tools used well, rather than exotic stacks no one maintains</li>
+                <li>Transparent documentation that non-engineers can follow</li>
+            </ul>
+
+            <p><strong>Some results I'm proud of:</strong></p>
+            <ul>
+                <li>✅ Reducing API inference cost by ~60% after fine-tuning</li>
+                <li>✅ Saving 30 minutes per analyst per day through LLM-powered mapping automation</li>
+                <li>✅ Improving decision speed with dashboards tied directly to modeled forecasts and churn signals</li>
+            </ul>
+
+            <p>But most of all, I like when the people using what I build say: <em>"This actually helped."</em></p>
+
+            <h3>🌐 Why I created fromdata2ai.com</h3>
+            <p>This site is part portfolio, part lab notebook, part digital garden. It exists because I believe:</p>
+            <ul>
+                <li>Good ideas become better when written down</li>
+                <li>AI should be shared, questioned, improved; not hidden behind buzzwords</li>
+                <li>The best learning happens when we build in the open</li>
+            </ul>
+
+            <p>Here, I document the systems I'm building, the ideas I'm refining, and the trade-offs I'm constantly learning from. Whether it's fine-tuning a model for market prediction, embedding customer feedback into vector stores, or exploring how GenAI tools integrate with human workflows — I share the technical details and the design thinking behind them.</p>
+
+            <h3>🧭 A few things that shape how I think</h3>
+            <ul>
+                <li>I'm deeply curious about how information shapes decisions, especially in markets and in teams</li>
+                <li>I believe data science is both a craft and a conversation, and clarity is part of our responsibility</li>
+                <li>I enjoy systems that blend language, logic, and structure, from pipelines to prompts</li>
+                <li>Outside work, I read sci-fi, study behavior, and reflect on how technology transforms how we relate to each other</li>
+            </ul>
+
+            <p><em>If you're someone who cares about building AI that works — and keeps working, I hope this space brings you something useful.</em></p>
         </section>
     </main>
 
