Reorganize: About as main page, LLM and Fine Tuning as separate content pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <p class="subtitle">From Data to AI: ML, Generative AI, and LLM insights for real-world applications</p>
         <img src="images/profile.jpg" alt="Raul Rocha" class="profile-photo">
         <nav>
-            <a href="index.html" class="active">LLM</a>
+            <a href="index.html" class="active">About</a>
+            <a href="llm.html">LLM</a>
             <a href="finetuning.html">Fine Tuning</a>
         </nav>
         <div class="social-links">
