--- a/llm.html
+++ b/llm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fine Tuning - From Data 2 AI</title>
+    <title>LLM - From Data 2 AI</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -15,8 +15,8 @@
         <img src="images/profile.jpg" alt="Raul Rocha" class="profile-photo">
         <nav>
             <a href="index.html">About</a>
-            <a href="llm.html">LLM</a>
-            <a href="finetuning.html" class="active">Fine Tuning</a>
+            <a href="llm.html" class="active">LLM</a>
+            <a href="finetuning.html">Fine Tuning</a>
         </nav>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/raulprocha/" target="_blank" aria-label="LinkedIn">
@@ -30,8 +30,8 @@
 
     <main>
         <section id="content">
-            <h2>Fine Tuning</h2>
-            <p>Conteúdo sobre Fine Tuning de LLMs em breve...</p>
+            <h2>LLM</h2>
+            <p>Conteúdo sobre Large Language Models em breve...</p>
         </section>
     </main>
 
