Add SEAL Framework interactive page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="index.html" class="active">About</a>
             <a href="llm.html">LLM</a>
             <a href="finetuning.html">Fine Tuning</a>
+            <a href="seal.html">SEAL Framework</a>
         </nav>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/raulprocha/" target="_blank" aria-label="LinkedIn">
