--- a/llm.html
+++ b/llm.html
@@ -17,6 +17,7 @@
             <a href="index.html">About</a>
             <a href="llm.html" class="active">LLM</a>
             <a href="finetuning.html">Fine Tuning</a>
+            <a href="seal.html">SEAL Framework</a>
         </nav>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/raulprocha/" target="_blank" aria-label="LinkedIn">
