--- a/index.html
+++ b/index.html
@@ -1,105 +1,143 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LLM - From Data 2 AI</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>From Data 2 AI</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Inter', sans-serif; background-color: #FDFBF8; color: #3f3c3a; }
+        .nav-link { transition: color 0.3s ease; color: #78716c; padding: 0.5rem 1rem; }
+        .nav-link:hover { color: #A52A2A; }
+        .dropdown { position: relative; display: inline-block; }
+        .dropdown-content { display: none; position: absolute; background-color: #fff; min-width: 200px; box-shadow: 0 8px 16px rgba(0,0,0,0.1); z-index: 1; border-radius: 0.5rem; margin-top: 0.5rem; }
+        .dropdown:hover .dropdown-content { display: block; }
+        .dropdown-content a { color: #78716c; padding: 12px 16px; text-decoration: none; display: block; }
+        .dropdown-content a:hover { background-color: #F0EBE3; color: #A52A2A; }
+    </style>
 </head>
-<body>
-    <header>
-        <h1><a href="/">From Data 2 AI</a></h1>
-        <p class="subtitle">From Data to AI: ML, Generative AI, and LLM insights for real-world applications</p>
-        <img src="images/profile.jpg" alt="Raul Rocha" class="profile-photo">
-        <nav>
-            <a href="index.html" class="active">About</a>
-            <a href="llm.html">LLM</a>
-            <a href="finetuning.html">Fine Tuning</a>
-            <a href="seal.html">SEAL Framework</a>
+<body class="antialiased">
+    <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
+        <nav class="container mx-auto px-6 py-4">
+            <div class="flex justify-between items-center">
+                <a href="index.html" class="text-2xl font-bold" style="color: #A52A2A;">From Data 2 AI</a>
+                <div class="flex items-center space-x-2">
+                    <a href="llm.html" class="nav-link">LLM</a>
+                    <div class="dropdown">
+                        <a href="finetuning.html" class="nav-link">Fine Tuning ▾</a>
+                        <div class="dropdown-content">
+                            <a href="seal.html">SEAL Framework</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </nav>
-        <div class="social-links">
-            <a href="https://www.linkedin.com/in/raulprocha/" target="_blank" aria-label="LinkedIn">
-                <svg width="24" height="24" viewBox="0 0 24 24"><path d="M19.7,3H4.3C3.582,3,3,3.582,3,4.3v15.4C3,20.418,3.582,21,4.3,21h15.4c0.718,0,1.3-0.582,1.3-1.3V4.3 C21,3.582,20.418,3,19.7,3z M8.339,18.338H5.667v-8.59h2.672V18.338z M7.004,8.574c-0.857,0-1.549-0.694-1.549-1.548 c0-0.855,0.691-1.548,1.549-1.548c0.854,0,1.547,0.694,1.547,1.548C8.551,7.881,7.858,8.574,7.004,8.574z M18.339,18.338h-2.669 v-4.177c0-0.996-0.017-2.278-1.387-2.278c-1.389,0-1.601,1.086-1.601,2.206v4.249h-2.667v-8.59h2.559v1.174h0.037 c0.356-0.675,1.227-1.387,2.526-1.387c2.703,0,3.203,1.779,3.203,4.092V18.338z"/></svg>
-            </a>
-            <a href="mailto:raulrocha.rpr@gmail.com" aria-label="Email">
-                <svg width="24" height="24" viewBox="0 0 24 24"><path d="M19,5H5c-1.1,0-2,.9-2,2v10c0,1.1.9,2,2,2h14c1.1,0,2-.9,2-2V7c0-1.1-.9-2-2-2zm.5,12c0,.3-.2.5-.5.5H5c-.3,0-.5-.2-.5-.5V9.8l7.5,5.6,7.5-5.6V17zm0-9.1L12,13.6,4.5,7.9V7c0-.3.2-.5.5-.5h14c.3,0,.5.2.5.5v.9z"/></svg>
-            </a>
-        </div>
     </header>
 
-    <main>
-        <section id="content">
-            <h2>✨ About fromdata2ai.com</h2>
-            
-            <p>Hi, I'm <strong>Raul Rocha</strong> — a Data Scientist and LLM Engineer with a passion for building systems that transform messy, unstructured data into clear signals and smarter decisions.</p>
+    <main class="container mx-auto px-6 py-12 max-w-4xl">
+        <div class="mb-12 text-center">
+            <img src="images/profile.jpg" alt="Raul Rocha" class="w-48 h-48 rounded-full mx-auto mb-6 object-cover border-4 border-gray-100 shadow-lg">
+            <h1 class="text-4xl font-bold mb-4">Hi, I'm Raul Rocha</h1>
+            <p class="text-xl text-gray-600">Data Scientist & LLM Engineer</p>
+        </div>
 
-            <p>My journey started at USP, where I studied Molecular Sciences: a deeply interdisciplinary program that gave me strong roots in math, statistics, programming, and scientific thinking. Since then, I've worked across the data lifecycle, from SQL pipelines and automated dashboards to forecasting models, churn prediction, and production-ready GenAI solutions.</p>
+        <section class="prose prose-lg max-w-none">
+            <p class="text-gray-700 leading-relaxed mb-6">
+                A Data Scientist and LLM Engineer with a passion for building systems that transform messy, unstructured data into clear signals and smarter decisions.
+            </p>
 
-            <p>Over the last few years, I've led and delivered projects that improved marketing performance, cut operational time, and helped teams move faster with fewer errors. What excites me isn't just building a model; it's building something that works. Something that integrates with people, processes, and platforms.</p>
+            <p class="text-gray-700 leading-relaxed mb-6">
+                My journey started at USP, where I studied Molecular Sciences: a deeply interdisciplinary program that gave me strong roots in math, statistics, programming, and scientific thinking. Since then, I've worked across the data lifecycle, from SQL pipelines and automated dashboards to forecasting models, churn prediction, and production-ready GenAI solutions.
+            </p>
 
-            <h3>🧠 What I work on</h3>
-            <ul>
-                <li>Fine-tuning open-source LLMs (Mistral, DeepSeek, etc.) for business-specific use cases</li>
-                <li>Designing RAG pipelines using vector DBs, LangChain, and semantic search</li>
-                <li>Deploying LLMs on AWS, with scalability and cost in mind (SageMaker, ECR, Athena, S3)</li>
-                <li>Building AI agents that automate complex workflows like campaign mapping</li>
-                <li>Maintaining clean SQL pipelines for marketing, ecommerce, and funnel analytics</li>
+            <p class="text-gray-700 leading-relaxed mb-8">
+                Over the last few years, I've led and delivered projects that improved marketing performance, cut operational time, and helped teams move faster with fewer errors. What excites me isn't just building a model; it's building something that works. Something that integrates with people, processes, and platforms.
+            </p>
+
+            <h2 class="text-3xl font-bold mb-4 mt-12" style="color: #A52A2A;">🧠 What I work on</h2>
+            <ul class="space-y-3 mb-8">
+                <li class="text-gray-700">Fine-tuning open-source LLMs (Mistral, DeepSeek, etc.) for business-specific use cases</li>
+                <li class="text-gray-700">Designing RAG pipelines using vector DBs, LangChain, and semantic search</li>
+                <li class="text-gray-700">Deploying LLMs on AWS, with scalability and cost in mind (SageMaker, ECR, Athena, S3)</li>
+                <li class="text-gray-700">Building AI agents that automate complex workflows like campaign mapping</li>
+                <li class="text-gray-700">Maintaining clean SQL pipelines for marketing, ecommerce, and funnel analytics</li>
             </ul>
 
-            <p>When needed, I still reach for traditional ML, especially when a lean logistic regression or XGBoost model solves the problem just as well.</p>
-            <p><em>I currently specialize in the practical side of Generative AI.</em></p>
+            <p class="text-gray-700 leading-relaxed mb-2">
+                When needed, I still reach for traditional ML, especially when a lean logistic regression or XGBoost model solves the problem just as well.
+            </p>
+            <p class="text-gray-700 italic mb-8">I currently specialize in the practical side of Generative AI.</p>
 
-            <h3>📐 My approach</h3>
-            <p>I don't build AI for the sake of buzz. I build it to ship, improve, and stay useful over time. I prefer:</p>
-            <ul>
-                <li>Testable experiments over assumptions</li>
-                <li>Simpler tools used well, rather than exotic stacks no one maintains</li>
-                <li>Transparent documentation that non-engineers can follow</li>
+            <h2 class="text-3xl font-bold mb-4 mt-12" style="color: #A52A2A;">📐 My approach</h2>
+            <p class="text-gray-700 leading-relaxed mb-4">
+                I don't build AI for the sake of buzz. I build it to ship, improve, and stay useful over time. I prefer:
+            </p>
+            <ul class="space-y-3 mb-6">
+                <li class="text-gray-700">Testable experiments over assumptions</li>
+                <li class="text-gray-700">Simpler tools used well, rather than exotic stacks no one maintains</li>
+                <li class="text-gray-700">Transparent documentation that non-engineers can follow</li>
             </ul>
 
-            <p><strong>Some results I'm proud of:</strong></p>
-            <ul>
-                <li>✅ Reducing API inference cost by ~60% after fine-tuning</li>
-                <li>✅ Saving 30 minutes per analyst per day through LLM-powered mapping automation</li>
-                <li>✅ Improving decision speed with dashboards tied directly to modeled forecasts and churn signals</li>
+            <p class="font-semibold text-gray-800 mb-3">Some results I'm proud of:</p>
+            <ul class="space-y-2 mb-6">
+                <li class="text-gray-700">✅ Reducing API inference cost by ~60% after fine-tuning</li>
+                <li class="text-gray-700">✅ Saving 30 minutes per analyst per day through LLM-powered mapping automation</li>
+                <li class="text-gray-700">✅ Improving decision speed with dashboards tied directly to modeled forecasts and churn signals</li>
             </ul>
 
-            <p>But most of all, I like when the people using what I build say: <em>"This actually helped."</em></p>
+            <p class="text-gray-700 italic leading-relaxed mb-8">
+                But most of all, I like when the people using what I build say: "This actually helped."
+            </p>
 
-            <h3>🌐 Why I created fromdata2ai.com</h3>
-            <p>This site is part portfolio, part lab notebook, part digital garden. It exists because I believe:</p>
-            <ul>
-                <li>Good ideas become better when written down</li>
-                <li>AI should be shared, questioned, improved; not hidden behind buzzwords</li>
-                <li>The best learning happens when we build in the open</li>
+            <h2 class="text-3xl font-bold mb-4 mt-12" style="color: #A52A2A;">🌐 Why I created fromdata2ai.com</h2>
+            <p class="text-gray-700 leading-relaxed mb-4">
+                This site is part portfolio, part lab notebook, part digital garden. It exists because I believe:
+            </p>
+            <ul class="space-y-3 mb-6">
+                <li class="text-gray-700">Good ideas become better when written down</li>
+                <li class="text-gray-700">AI should be shared, questioned, improved; not hidden behind buzzwords</li>
+                <li class="text-gray-700">The best learning happens when we build in the open</li>
             </ul>
 
-            <p>Here, I document the systems I'm building, the ideas I'm refining, and the trade-offs I'm constantly learning from. Whether it's fine-tuning a model for market prediction, embedding customer feedback into vector stores, or exploring how GenAI tools integrate with human workflows — I share the technical details and the design thinking behind them.</p>
+            <p class="text-gray-700 leading-relaxed mb-8">
+                Here, I document the systems I'm building, the ideas I'm refining, and the trade-offs I'm constantly learning from. Whether it's fine-tuning a model for market prediction, embedding customer feedback into vector stores, or exploring how GenAI tools integrate with human workflows — I share the technical details and the design thinking behind them.
+            </p>
 
-            <h3>🧭 A few things that shape how I think</h3>
-            <ul>
-                <li>I'm deeply curious about how information shapes decisions, especially in markets and in teams</li>
-                <li>I believe data science is both a craft and a conversation, and clarity is part of our responsibility</li>
-                <li>I enjoy systems that blend language, logic, and structure, from pipelines to prompts</li>
-                <li>Outside work, I read sci-fi, study behavior, and reflect on how technology transforms how we relate to each other</li>
+            <h2 class="text-3xl font-bold mb-4 mt-12" style="color: #A52A2A;">🧭 A few things that shape how I think</h2>
+            <ul class="space-y-3 mb-6">
+                <li class="text-gray-700">I'm deeply curious about how information shapes decisions, especially in markets and in teams</li>
+                <li class="text-gray-700">I believe data science is both a craft and a conversation, and clarity is part of our responsibility</li>
+                <li class="text-gray-700">I enjoy systems that blend language, logic, and structure, from pipelines to prompts</li>
+                <li class="text-gray-700">Outside work, I read sci-fi, study behavior, and reflect on how technology transforms how we relate to each other</li>
             </ul>
 
-            <p><em>If you're someone who cares about building AI that works — and keeps working, I hope this space brings you something useful.</em></p>
+            <p class="text-gray-700 italic leading-relaxed text-center mt-12 text-lg">
+                If you're someone who cares about building AI that works — and keeps working, I hope this space brings you something useful.
+            </p>
         </section>
     </main>
 
-    <footer>
-        <div class="footer-content">
-            <div>
-                <h3>From Data 2 AI</h3>
-                <p>From Data to AI: ML, Generative AI, and LLM insights for real-world applications</p>
-            </div>
-            <div>
-                <h3>Contact</h3>
-                <p><a href="mailto:raulrocha.rpr@gmail.com">E-mail</a></p>
-                <p><a href="https://www.linkedin.com/in/raulprocha/">LinkedIn</a></p>
+    <footer class="bg-gray-50 mt-16 py-8 border-t border-gray-200">
+        <div class="container mx-auto px-6">
+            <div class="grid md:grid-cols-3 gap-8 text-center md:text-left">
+                <div>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">From Data 2 AI</h3>
+                    <p class="text-gray-600 text-sm">ML, Generative AI, and LLM insights for real-world applications</p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Contact</h3>
+                    <p class="text-sm"><a href="mailto:raulrocha.rpr@gmail.com" class="text-gray-600 hover:text-gray-900">raulrocha.rpr@gmail.com</a></p>
+                    <p class="text-sm"><a href="https://www.linkedin.com/in/raulprocha/" target="_blank" class="text-gray-600 hover:text-gray-900">LinkedIn</a></p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Explore</h3>
+                    <p class="text-sm"><a href="llm.html" class="text-gray-600 hover:text-gray-900">LLM</a></p>
+                    <p class="text-sm"><a href="finetuning.html" class="text-gray-600 hover:text-gray-900">Fine Tuning</a></p>
+                    <p class="text-sm"><a href="seal.html" class="text-gray-600 hover:text-gray-900">SEAL Framework</a></p>
+                </div>
             </div>
         </div>
     </footer>
