--- a/llm.html
+++ b/llm.html
@@ -1,51 +1,67 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LLM - From Data 2 AI</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Inter', sans-serif; background-color: #FDFBF8; color: #3f3c3a; }
+        .nav-link { transition: color 0.3s ease; color: #78716c; padding: 0.5rem 1rem; }
+        .nav-link:hover, .nav-link.active { color: #A52A2A; }
+        .dropdown { position: relative; display: inline-block; }
+        .dropdown-content { display: none; position: absolute; background-color: #fff; min-width: 200px; box-shadow: 0 8px 16px rgba(0,0,0,0.1); z-index: 1; border-radius: 0.5rem; margin-top: 0.5rem; }
+        .dropdown:hover .dropdown-content { display: block; }
+        .dropdown-content a { color: #78716c; padding: 12px 16px; text-decoration: none; display: block; }
+        .dropdown-content a:hover { background-color: #F0EBE3; color: #A52A2A; }
+    </style>
 </head>
-<body>
-    <header>
-        <h1><a href="/">From Data 2 AI</a></h1>
-        <p class="subtitle">From Data to AI: ML, Generative AI, and LLM insights for real-world applications</p>
-        <img src="images/profile.jpg" alt="Raul Rocha" class="profile-photo">
-        <nav>
-            <a href="index.html">About</a>
-            <a href="llm.html" class="active">LLM</a>
-            <a href="finetuning.html">Fine Tuning</a>
-            <a href="seal.html">SEAL Framework</a>
+<body class="antialiased">
+    <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
+        <nav class="container mx-auto px-6 py-4">
+            <div class="flex justify-between items-center">
+                <a href="index.html" class="text-2xl font-bold" style="color: #A52A2A;">From Data 2 AI</a>
+                <div class="flex items-center space-x-2">
+                    <a href="llm.html" class="nav-link active">LLM</a>
+                    <div class="dropdown">
+                        <a href="finetuning.html" class="nav-link">Fine Tuning ▾</a>
+                        <div class="dropdown-content">
+                            <a href="seal.html">SEAL Framework</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </nav>
-        <div class="social-links">
-            <a href="https://www.linkedin.com/in/raulprocha/" target="_blank" aria-label="LinkedIn">
-                <svg width="24" height="24" viewBox="0 0 24 24"><path d="M19.7,3H4.3C3.582,3,3,3.582,3,4.3v15.4C3,20.418,3.582,21,4.3,21h15.4c0.718,0,1.3-0.582,1.3-1.3V4.3 C21,3.582,20.418,3,19.7,3z M8.339,18.338H5.667v-8.59h2.672V18.338z M7.004,8.574c-0.857,0-1.549-0.694-1.549-1.548 c0-0.855,0.691-1.548,1.549-1.548c0.854,0,1.547,0.694,1.547,1.548C8.551,7.881,7.858,8.574,7.004,8.574z M18.339,18.338h-2.669 v-4.177c0-0.996-0.017-2.278-1.387-2.278c-1.389,0-1.601,1.086-1.601,2.206v4.249h-2.667v-8.59h2.559v1.174h0.037 c0.356-0.675,1.227-1.387,2.526-1.387c2.703,0,3.203,1.779,3.203,4.092V18.338z"/></svg>
-            </a>
-            <a href="mailto:raulrocha.rpr@gmail.com" aria-label="Email">
-                <svg width="24" height="24" viewBox="0 0 24 24"><path d="M19,5H5c-1.1,0-2,.9-2,2v10c0,1.1.9,2,2,2h14c1.1,0,2-.9,2-2V7c0-1.1-.9-2-2-2zm.5,12c0,.3-.2.5-.5.5H5c-.3,0-.5-.2-.5-.5V9.8l7.5,5.6,7.5-5.6V17zm0-9.1L12,13.6,4.5,7.9V7c0-.3.2-.5.5-.5h14c.3,0,.5.2.5.5v.9z"/></svg>
-            </a>
-        </div>
     </header>
 
-    <main>
-        <section id="content">
-            <h2>LLM</h2>
-            <p>Conteúdo sobre Large Language Models em breve...</p>
-        </section>
+    <main class="container mx-auto px-6 py-12 max-w-4xl">
+        <h1 class="text-4xl font-bold mb-8" style="color: #A52A2A;">Large Language Models</h1>
+        <div class="prose prose-lg max-w-none">
+            <p class="text-gray-700 leading-relaxed">Content about LLMs coming soon...</p>
+        </div>
     </main>
 
-    <footer>
-        <div class="footer-content">
-            <div>
-                <h3>From Data 2 AI</h3>
-                <p>From Data to AI: ML, Generative AI, and LLM insights for real-world applications</p>
-            </div>
-            <div>
-                <h3>Contact</h3>
-                <p><a href="mailto:raulrocha.rpr@gmail.com">E-mail</a></p>
-                <p><a href="https://www.linkedin.com/in/raulprocha/">LinkedIn</a></p>
+    <footer class="bg-gray-50 mt-16 py-8 border-t border-gray-200">
+        <div class="container mx-auto px-6">
+            <div class="grid md:grid-cols-3 gap-8 text-center md:text-left">
+                <div>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">From Data 2 AI</h3>
+                    <p class="text-gray-600 text-sm">ML, Generative AI, and LLM insights for real-world applications</p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Contact</h3>
+                    <p class="text-sm"><a href="mailto:raulrocha.rpr@gmail.com" class="text-gray-600 hover:text-gray-900">raulrocha.rpr@gmail.com</a></p>
+                    <p class="text-sm"><a href="https://www.linkedin.com/in/raulprocha/" target="_blank" class="text-gray-600 hover:text-gray-900">LinkedIn</a></p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Explore</h3>
+                    <p class="text-sm"><a href="llm.html" class="text-gray-600 hover:text-gray-900">LLM</a></p>
+                    <p class="text-sm"><a href="finetuning.html" class="text-gray-600 hover:text-gray-900">Fine Tuning</a></p>
+                    <p class="text-sm"><a href="seal.html" class="text-gray-600 hover:text-gray-900">SEAL Framework</a></p>
+                </div>
             </div>
         </div>
     </footer>
