--- a/seal.html
+++ b/seal.html
@@ -77,25 +77,31 @@
             padding: 1rem 0;
             margin-bottom: 1rem;
         }
-        .site-nav a {
-            color: #78716c;
-            text-decoration: none;
-            margin: 0 1rem;
-            font-weight: 500;
-        }
-        .site-nav a:hover, .site-nav a.active {
-            color: #A52A2A;
-        }
+        .site-nav-link { transition: color 0.3s ease; color: #78716c; padding: 0.5rem 1rem; }
+        .site-nav-link:hover { color: #A52A2A; }
+        .dropdown { position: relative; display: inline-block; }
+        .dropdown-content { display: none; position: absolute; background-color: #fff; min-width: 200px; box-shadow: 0 8px 16px rgba(0,0,0,0.1); z-index: 1; border-radius: 0.5rem; margin-top: 0.5rem; }
+        .dropdown:hover .dropdown-content { display: block; }
+        .dropdown-content a { color: #78716c; padding: 12px 16px; text-decoration: none; display: block; }
+        .dropdown-content a:hover { background-color: #F0EBE3; color: #A52A2A; }
     </style>
 </head>
 <body class="antialiased">
 
-    <div class="site-nav">
-        <div class="container mx-auto px-6 text-center">
-            <a href="index.html">About</a>
-            <a href="llm.html">LLM</a>
-            <a href="finetuning.html">Fine Tuning</a>
-            <a href="seal.html" class="active">SEAL Framework</a>
+    <div class="bg-white border-b border-gray-200 py-3">
+        <div class="container mx-auto px-6">
+            <div class="flex justify-between items-center">
+                <a href="index.html" class="text-xl font-bold" style="color: #A52A2A;">From Data 2 AI</a>
+                <div class="flex items-center space-x-2">
+                    <a href="llm.html" class="site-nav-link">LLM</a>
+                    <div class="dropdown">
+                        <a href="finetuning.html" class="site-nav-link">Fine Tuning ▾</a>
+                        <div class="dropdown-content">
+                            <a href="seal.html">SEAL Framework</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
