Add RAG section to navigation menu
- Added RAG dropdown to all pages
- Links to AWS Bedrock RAG tutorial
- Consistent navigation across site

--- a/finetuning.html
+++ b/finetuning.html
@@ -31,6 +31,12 @@
                         <div class="dropdown-content">
                             <a href="seal.html">SEAL Framework</a>
                         </div>
+                    <div class="dropdown">
+                        <a href="#" class="nav-link">RAG ▾</a>
+                        <div class="dropdown-content">
+                            <a href="rag-tutorial.html">AWS Bedrock RAG</a>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
