--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                             <a href="seal.html">SEAL Framework</a>
                         </div>
                     </div>
+                    <div class="dropdown">
+                        <a href="#" class="nav-link">RAG ▾</a>
+                        <div class="dropdown-content">
+                            <a href="rag-tutorial.html">AWS Bedrock RAG</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
