Standardize header and footer across all pages
- Fixed seal.html duplicate header issue
- Unified navigation with working RAG dropdown
- Standardized footer with 3-column layout
- Added Quick Links section to footer
- Consistent design across all pages

--- a/rag-tutorial.html
+++ b/rag-tutorial.html
@@ -864,17 +864,32 @@ manager.recreate_index()
         </div>
     </main>
 
-    <footer class="bg-white border-t border-gray-200 py-8 mt-16">
-        <div class="container mx-auto px-6 text-center text-gray-600">
-            <p class="mb-2">Built with ❤️ by <a href="https://fromdata2ai.com/" class="text-[#A52A2A] hover:underline">Raul Rocha</a></p>
-            <p class="text-sm">AI/ML Specialist | Data Scientist | LLM Engineer</p>
-            <div class="mt-4 flex justify-center space-x-4">
-                <a href="https://github.com/raulprocha" class="text-gray-600 hover:text-[#A52A2A]">GitHub</a>
-                <a href="https://linkedin.com/in/raulprocha" class="text-gray-600 hover:text-[#A52A2A]">LinkedIn</a>
-                <a href="mailto:raulrocha.rpr@gmail.com" class="text-gray-600 hover:text-[#A52A2A]">Email</a>
+        <footer class="bg-gray-50 mt-16 py-8 border-t border-gray-200">
+        <div class="container mx-auto px-6">
+            <div class="grid md:grid-cols-3 gap-8 text-center md:text-left">
+                <div>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">From Data 2 AI</h3>
+                    <p class="text-gray-600 text-sm">ML, Generative AI, and LLM insights for real-world applications</p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Contact</h3>
+                    <p class="text-sm"><a href="mailto:raulrocha.rpr@gmail.com" class="text-gray-600 hover:text-gray-900">raulrocha.rpr@gmail.com</a></p>
+                    <p class="text-sm"><a href="https://www.linkedin.com/in/raulprocha/" target="_blank" class="text-gray-600 hover:text-gray-900">LinkedIn</a></p>
+                    <p class="text-sm"><a href="https://github.com/raulprocha" target="_blank" class="text-gray-600 hover:text-gray-900">GitHub</a></p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Quick Links</h3>
+                    <p class="text-sm"><a href="llm.html" class="text-gray-600 hover:text-gray-900">LLM</a></p>
+                    <p class="text-sm"><a href="finetuning.html" class="text-gray-600 hover:text-gray-900">Fine Tuning</a></p>
+                    <p class="text-sm"><a href="rag-tutorial.html" class="text-gray-600 hover:text-gray-900">RAG Tutorial</a></p>
+                </div>
+            </div>
+            <div class="mt-8 pt-6 border-t border-gray-300 text-center text-gray-600 text-sm">
+                <p>Built with ❤️ by Raul Rocha | AI/ML Specialist | Data Scientist | LLM Engineer</p>
             </div>
         </div>
     </footer>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
