--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
     </main>
 
-    <footer class="bg-gray-50 mt-16 py-8 border-t border-gray-200">
+        <footer class="bg-gray-50 mt-16 py-8 border-t border-gray-200">
         <div class="container mx-auto px-6">
             <div class="grid md:grid-cols-3 gap-8 text-center md:text-left">
                 <div>
@@ -149,15 +149,20 @@
                     <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Contact</h3>
                     <p class="text-sm"><a href="mailto:raulrocha.rpr@gmail.com" class="text-gray-600 hover:text-gray-900">raulrocha.rpr@gmail.com</a></p>
                     <p class="text-sm"><a href="https://www.linkedin.com/in/raulprocha/" target="_blank" class="text-gray-600 hover:text-gray-900">LinkedIn</a></p>
+                    <p class="text-sm"><a href="https://github.com/raulprocha" target="_blank" class="text-gray-600 hover:text-gray-900">GitHub</a></p>
                 </div>
                 <div>
-                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Explore</h3>
+                    <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Quick Links</h3>
                     <p class="text-sm"><a href="llm.html" class="text-gray-600 hover:text-gray-900">LLM</a></p>
                     <p class="text-sm"><a href="finetuning.html" class="text-gray-600 hover:text-gray-900">Fine Tuning</a></p>
-                    <p class="text-sm"><a href="seal.html" class="text-gray-600 hover:text-gray-900">SEAL Framework</a></p>
+                    <p class="text-sm"><a href="rag-tutorial.html" class="text-gray-600 hover:text-gray-900">RAG Tutorial</a></p>
                 </div>
+            </div>
+            <div class="mt-8 pt-6 border-t border-gray-300 text-center text-gray-600 text-sm">
+                <p>Built with ❤️ by Raul Rocha | AI/ML Specialist | Data Scientist | LLM Engineer</p>
             </div>
         </div>
     </footer>
+
 </body>
 </html>
