Fix header consistency and dropdown behavior
- Standardized header spacing across all pages
- Changed dropdown triggers from <a> to <span> to prevent conflicts
- Added cursor-pointer for better UX
- Fixed RAG tutorial hero section to match SEAL pattern exactly
- Added 'Overview' link to Fine Tuning dropdown
- All dropdowns now work independently

--- a/rag-tutorial.html
+++ b/rag-tutorial.html
@@ -29,20 +29,21 @@
     </style>
 </head>
 <body class="antialiased">
-    <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
+        <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
         <nav class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
-                <a href="https://fromdata2ai.com/" class="text-2xl font-bold" style="color: #A52A2A;">From Data 2 AI</a>
+                <a href="index.html" class="text-2xl font-bold" style="color: #A52A2A;">From Data 2 AI</a>
                 <div class="flex items-center space-x-2">
-                    <a href="https://fromdata2ai.com/llm.html" class="nav-link">LLM</a>
+                    <a href="llm.html" class="nav-link">LLM</a>
                     <div class="dropdown">
-                        <a href="https://fromdata2ai.com/finetuning.html" class="nav-link">Fine Tuning ▾</a>
+                        <span class="nav-link cursor-pointer">Fine Tuning ▾</span>
                         <div class="dropdown-content">
-                            <a href="https://fromdata2ai.com/seal.html">SEAL Framework</a>
+                            <a href="finetuning.html">Overview</a>
+                            <a href="seal.html">SEAL Framework</a>
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#" class="nav-link">RAG ▾</a>
+                        <span class="nav-link cursor-pointer">RAG ▾</span>
                         <div class="dropdown-content">
                             <a href="rag-tutorial.html">AWS Bedrock RAG</a>
                         </div>
@@ -52,25 +53,20 @@
         </nav>
     </header>
 
-    <main class="container mx-auto px-6 py-12">
-        <!-- Hero Section -->
-        <section class="my-16 scroll-mt-20">
+        <main class="container mx-auto px-6 py-12">
+        <section id="introduction" class="my-16 scroll-mt-20">
             <div class="text-center mb-12">
                 <h2 class="text-4xl font-bold mb-2">Building Production RAG Systems</h2>
                 <p class="text-lg text-gray-600">A Complete Guide to AWS Bedrock Knowledge Bases & Agents</p>
+                <div class="flex justify-center gap-2 flex-wrap mt-6">
+                    <span class="tech-badge">AWS Bedrock</span>
+                    <span class="tech-badge">RAG</span>
+                    <span class="tech-badge">Vector Search</span>
+                    <span class="tech-badge">Terraform</span>
+                    <span class="tech-badge">Python</span>
+                    <span class="tech-badge">FAISS</span>
+                </div>
             </div>
-            <div class="flex justify-center gap-2 flex-wrap mb-8">
-                <span class="tech-badge">AWS Bedrock</span>
-                <span class="tech-badge">RAG</span>
-                <span class="tech-badge">Vector Search</span>
-                <span class="tech-badge">Terraform</span>
-                <span class="tech-badge">Python</span>
-                <span class="tech-badge">FAISS</span>
-            </div>
-        </section>
-
-        <!-- Introduction -->
-        <section id="introduction" class="my-16 scroll-mt-20">
             <div class="card p-8 max-w-4xl mx-auto">
                 <h2 class="section-title">Introduction</h2>
             <p class="text-gray-700 leading-relaxed mb-4">
