--- a/index.html
+++ b/index.html
@@ -10,13 +10,48 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; background-color: #FDFBF8; color: #3f3c3a; }
-        .nav-link { transition: color 0.3s ease; color: #78716c; padding: 0.5rem 1rem; }
-        .nav-link:hover { color: #A52A2A; }
-        .dropdown { position: relative; display: inline-block; }
-        .dropdown-content { display: none; position: absolute; background-color: #fff; min-width: 200px; box-shadow: 0 8px 16px rgba(0,0,0,0.1); z-index: 1; border-radius: 0.5rem; margin-top: 0.5rem; }
-        .dropdown:hover .dropdown-content { display: block; }
-        .dropdown-content a { color: #78716c; padding: 12px 16px; text-decoration: none; display: block; }
-        .dropdown-content a:hover { background-color: #F0EBE3; color: #A52A2A; }
+                .nav-link {
+            transition: color 0.3s ease;
+            color: #78716c;
+            padding: 0.5rem 1rem;
+        }
+        .nav-link:hover {
+            color: #A52A2A;
+        }
+        .cursor-pointer {
+            cursor: pointer;
+        }
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #fff;
+            min-width: 200px;
+            box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+            z-index: 1000;
+            border-radius: 0.5rem;
+            margin-top: 0.25rem;
+            padding: 0.5rem 0;
+            border: 1px solid #F0EBE3;
+        }
+        .dropdown:hover .dropdown-content,
+        .dropdown-content:hover {
+            display: block;
+        }
+        .dropdown-content a {
+            color: #78716c;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            transition: all 0.2s ease;
+        }
+        .dropdown-content a:hover {
+            background-color: #F0EBE3;
+            color: #A52A2A;
+        }
         .card { background-color: #FFFFFF; border: 1px solid #F0EBE3; border-radius: 0.75rem; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -1px rgba(0, 0, 0, 0.03); transition: transform 0.3s ease, box-shadow 0.3s ease; }
         .card:hover { transform: translateY(-2px); box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
     </style>
