--- a/seal.html
+++ b/seal.html
@@ -17,73 +17,48 @@
             background-color: #FDFBF8;
             color: #3f3c3a;
         }
-        .nav-link {
+                .nav-link {
             transition: color 0.3s ease;
             color: #78716c;
+            padding: 0.5rem 1rem;
         }
-        .nav-link:hover, .nav-link.active {
+        .nav-link:hover {
             color: #A52A2A;
         }
-        .card {
-            background-color: #FFFFFF;
-            border: 1px solid #F0EBE3;
-            border-radius: 0.75rem;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -1px rgba(0, 0, 0, 0.03);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        .cursor-pointer {
+            cursor: pointer;
         }
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-        }
-        .btn {
-            background-color: #F0EBE3;
-            color: #3f3c3a;
-            padding: 0.5rem 1rem;
-            border-radius: 0.5rem;
-            transition: background-color 0.3s ease;
-            font-weight: 500;
-        }
-        .btn:hover {
-            background-color: #E4DCD3;
-        }
-        .btn.active {
-            background-color: #A52A2A;
-            color: #FFFFFF;
-        }
-        .code-block {
-            background-color: #2d2d2d;
-            color: #f8f8f2;
-            padding: 1rem;
-            border-radius: 0.5rem;
-            overflow-x: auto;
-            font-family: 'Courier New', Courier, monospace;
-            font-size: 0.875rem;
-        }
-        .chart-container {
+        .dropdown {
             position: relative;
-            width: 100%;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-            height: 400px;
-            max-height: 50vh;
+            display: inline-block;
         }
-        ::-webkit-scrollbar { width: 8px; }
-        ::-webkit-scrollbar-track { background: #F0EBE3; }
-        ::-webkit-scrollbar-thumb { background: #A52A2A; border-radius: 4px; }
-        .site-nav {
-            background: #fff;
-            border-bottom: 1px solid #F0EBE3;
-            padding: 1rem 0;
-            margin-bottom: 1rem;
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #fff;
+            min-width: 200px;
+            box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+            z-index: 1000;
+            border-radius: 0.5rem;
+            margin-top: 0.25rem;
+            padding: 0.5rem 0;
+            border: 1px solid #F0EBE3;
         }
-        .site-nav-link { transition: color 0.3s ease; color: #78716c; padding: 0.5rem 1rem; }
-        .site-nav-link:hover { color: #A52A2A; }
-        .dropdown { position: relative; display: inline-block; }
-        .dropdown-content { display: none; position: absolute; background-color: #fff; min-width: 200px; box-shadow: 0 8px 16px rgba(0,0,0,0.1); z-index: 1; border-radius: 0.5rem; margin-top: 0.5rem; }
-        .dropdown:hover .dropdown-content { display: block; }
-        .dropdown-content a { color: #78716c; padding: 12px 16px; text-decoration: none; display: block; }
-        .dropdown-content a:hover { background-color: #F0EBE3; color: #A52A2A; }
+        .dropdown:hover .dropdown-content,
+        .dropdown-content:hover {
+            display: block;
+        }
+        .dropdown-content a {
+            color: #78716c;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            transition: all 0.2s ease;
+        }
+        .dropdown-content a:hover {
+            background-color: #F0EBE3;
+            color: #A52A2A;
+        }
     </style>
 </head>
 <body class="antialiased">
