Restore code-block CSS styling in seal.html
- Re-added .code-block CSS that was accidentally removed
- Fixes code snippet formatting
- Dark background with syntax highlighting

--- a/seal.html
+++ b/seal.html
@@ -59,6 +59,15 @@
             background-color: #F0EBE3;
             color: #A52A2A;
         }
+            .code-block {
+            background-color: #2d2d2d;
+            color: #f8f8f2;
+            padding: 1rem;
+            border-radius: 0.5rem;
+            overflow-x: auto;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 0.875rem;
+        }
     </style>
 </head>
 <body class="antialiased">
