Add hero section to SEAL page matching RAG style
- Added title: SEAL Framework
- Added subtitle: Evaluating Augmented Language Models
- Added tech badges: LLM Evaluation, Augmented Models, Tool Use, etc.
- Consistent styling with RAG tutorial page

--- a/seal.html
+++ b/seal.html
@@ -59,7 +59,16 @@
             background-color: #F0EBE3;
             color: #A52A2A;
         }
-            .code-block {
+                    .tech-badge {
+            display: inline-block;
+            background-color: #F0EBE3;
+            color: #A52A2A;
+            padding: 0.25rem 0.75rem;
+            border-radius: 1rem;
+            font-size: 0.875rem;
+            margin: 0.25rem;
+        }
+        .code-block {
             background-color: #2d2d2d;
             color: #f8f8f2;
             padding: 1rem;
@@ -97,8 +106,24 @@
 
 
 
+    
     <main class="container mx-auto px-6 py-12">
-        <section id="analogy" class="my-16 scroll-mt-20">
+        <!-- Hero Section -->
+        <section class="my-16 scroll-mt-20">
+            <div class="text-center mb-12">
+                <h2 class="text-4xl font-bold mb-2">SEAL Framework</h2>
+                <p class="text-lg text-gray-600">Evaluating Augmented Language Models with Process-Based Assessment</p>
+                <div class="flex justify-center gap-2 flex-wrap mt-6">
+                    <span class="tech-badge">LLM Evaluation</span>
+                    <span class="tech-badge">Augmented Models</span>
+                    <span class="tech-badge">Tool Use</span>
+                    <span class="tech-badge">Benchmarking</span>
+                    <span class="tech-badge">AI Agents</span>
+                </div>
+            </div>
+        </section>
+
+        <section id="analogy" class="my-16 scroll-mt-20"> class="my-16 scroll-mt-20">
             <div class="text-center mb-12">
                 <h2 class="text-4xl font-bold mb-2">Introduce & Analogize</h2>
                 <p class="text-lg text-gray-600">Let's grasp the core idea with a simple, powerful analogy.</p>
