--- a/seal.html
+++ b/seal.html
@@ -17,7 +17,18 @@
             background-color: #FDFBF8;
             color: #3f3c3a;
         }
-                .nav-link {
+        .card {
+            background-color: #FFFFFF;
+            border: 1px solid #F0EBE3;
+            border-radius: 0.75rem;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -1px rgba(0, 0, 0, 0.03);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        }
+        .nav-link {
             transition: color 0.3s ease;
             color: #78716c;
             padding: 0.5rem 1rem;
