Add Gold Market Prediction page to Fine Tuning section
- Created comprehensive page about llms-gold_market project
- Covers ML pipeline for XAU/USD prediction using LLMs
- Includes architecture, performance metrics, cost analysis
- Added to Fine Tuning dropdown navigation
- Follows same design pattern as SEAL and RAG pages
- Hero section with tech badges
- Card-based layout with hover effects
- GitHub link to repository

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body class="antialiased">
-            <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
+                <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
         <nav class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold" style="color: #A52A2A;">From Data 2 AI</a>
@@ -67,6 +67,7 @@
                         <a href="finetuning.html" class="nav-link">Fine Tuning ▾</a>
                         <div class="dropdown-content">
                             <a href="seal.html">SEAL Framework</a>
+                            <a href="gold-market.html">Gold Market Prediction</a>
                         </div>
                     </div>
                     <a href="rag-tutorial.html" class="nav-link">RAG</a>
